@@ -142,7 +142,6 @@
         </td>
         <?php endif; ?>
       </tr>
-      <?php endif; ?>
 
       <!-- Creator Permissions -->
       <tr>
@@ -170,6 +169,7 @@
         </td>
         <?php endif; ?>
       </tr>
+      <?php endif; ?>
       </tbody>
     </table>
     </div>
