@@ -2,6 +2,8 @@
 v4.2.19-git
 -----------
 
+[jan] Disallow setting of creator permissions too if sharing with world is
+      disabled.
 [jan] Split shared users by linebreaks too.
 
 
